--- a/index/index.Rmd
+++ b/index/index.Rmd
@@ -8,25 +8,27 @@ school: "Physiology, Pharmacology and Neuroscience / Population Health Sciences"
 group: "Bristol Platelet Group / Team Timpson"
 degree: "PhD"
 logo: figure/index/UoBcrest.pdf # logo will only show on PDF
+wordcount: "1"
 bibliography: bib/library.bib # location of your bibliography 
 csl: csl/nature.csl # location of your referencing style 
 knit: "bookdown::render_book" # doesnt need changing 
-site: bookdown::bookdown_site # doesnt need changing 
-toc-depth: 3 # change for the depth of the table of contents - 1 gives two levels, 2 gives 3 levels etc...
+site: "bookdown::bookdown_site" # doesnt need changing 
 lot: true 
 lof: true
 space_between_paragraphs: true
 fig_caption: true
+always_allow_html: yes
+link-citations: true
+indent: true
 header-includes:
-    \usepackage{tikz}
-    \usepackage{booktabs}
-    \usepackage{longtable}
-    \usepackage{siunitx}
     \usepackage{float}
     \floatplacement{figure}{H}
-    \pagestyle{plain}
+    \raggedbottom
 output: 
-  thesisdown::thesis_pdf: default
+  thesisdown::thesis_pdf: 
+    toc: true
+    toc-depth: 3
+    latex_engine: pdflatex
 #  thesisdown::thesis_gitbook: default
 # thesisdown::thesis_word: default
 #  thesisdown::thesis_epub: default
@@ -38,7 +40,8 @@ declaration: |
   `r if(knitr:::is_latex_output()) paste(readLines("00-declaration.Rmd"), collapse = '\n  ')`
 abbreviations: |
   `r if(knitr:::is_latex_output()) paste(readLines("00-abbreviations.Rmd"), collapse = '\n  ')`
-  
+editor_options:
+  chunk_output_type: console
 ---
 
 
