--- a/index/04-chap4.Rmd
+++ b/index/04-chap4.Rmd
@@ -93,7 +93,7 @@ Citrated whole blood was diluted 1:10 in HEPES-Tyrode's buffer and incubated wit
 Platelet lysate samples (50 ug total protein) were digested with trypsin and labelled with TMT 15 plex reagents (ThermoFisher Scientific, Loughborough, UK). Labelled samples were pooled. The pooled sample was evaporated to dryness then resuspended in formic acid (5%). The pooled sample was then desalted using a SepPak cartridge (Waters, Milford, Massachussetts, USA). Eluate from the SepPak cartridge was evaporated to dryness and resuspended prior to fractionation by high pH reversed-phase chromatography using an Ultimate 3000 liquid chromatography system (Thermo Fisher Scientific). Further fractionation occurred using high pH RP fractions using the Ulitamte 3000 nano-LC system in line with an Orbitrap Fusion Tribrid Mass Spectrometer (ThermoFisher Scientific). Further details of the methods used for mass spectrometry within the proteomics facility have been previously published[@Durrant2020].
 
 ### Statistical analysis for platelet function assays
-Data was analysed using GraphPad Prism 8. If data displayed a normal distribution (based on Shapiro-Wilk p-value and W statistic), a parametric test was used (e.g. unpaired t-test or one way ANOVA), otherwise a nonparametric test was used. Concentration-response curves were plotted using a four parameter variable slope. To compare concentration-response curve parameters, pEC50s or curve maxes were compared. A Fisher's exact test was used to compare proportions of categorical variables. Statistical tests used for each experiment are provided in figure legends. Strength of evidence is determined by p-values, however results will not be dichotomised as either 'significant' or 'not significant'[@Sterne2001], especially as the current study has low power. 
+Data was analysed using GraphPad Prism 8. All data points are presented where possible to be fully transparent. If data displayed a normal distribution (based on Shapiro-Wilk p-value and W statistic), a parametric test was used (e.g. unpaired t-test or one way ANOVA), otherwise a nonparametric test was used. Concentration-response curves were plotted using a four parameter variable slope. To compare concentration-response curve parameters, pEC50s or curve maxes were compared. A Fisher's exact test was used to compare proportions of categorical variables. Statistical tests used for each experiment are provided in figure legends. P-values for results are presented throughout, however these were not dichotomised as either 'significant' or 'not significant'[@Sterne2001] as the current study has low power and the groups are unlikely to be representative of the respective populations. A P-value threshold of 0.05 may therefore not be appropriate in this case.  
 
 ### Analysis of proteomic data
 A principal component analysis (PCA) was performed to reduce the data and to identify major axes (principal components, PCs). This method helps to determine whether the major axes of the data can likely be explained by the group (bariatric patient with obesity or control participant). Normalised protein abundances were log~2~ transformed, where the logFC was calculated by subtracting the log2 normalised protein abundance of the control subjects from the bariatric surgery group. The log~2~ normalised protein abundances of bariatric patients were compared to controls using a two-tailed unpaired t-test. P-values were not adjusted for multiple testing, due to the observation that false discovery rate (FDR) adjustment may be too blunt in low power proteomics experiments[@Pascovici2016]. P-values of all comparisons are provided in the supplementary results in Chapter \@ref(BMI-platelets-clinic). (FDR) adjusted p-values are also provided in the full results as a reference. A positive logFC indicates an increase in protein level in the bariatric samples.
@@ -217,7 +217,7 @@ This study did not detect differences in platelet characteristics such as IPC wh
 
 One previous study detected an increase in GPVI receptor levels and GPVI mediated platelet aggregation[@Barrachina2019]. Despite this previous finding, Barrachina et al. did not directly measure activation of the integrin α~IIb~β~3~, so it is unclear how this increase in expression would translate to the activation of this integrin. A larger sample size would be required to be able to draw conclusions here. As well as this, aggregation experiments would have also been useful to compare platelet function across groups, however this technique was not chosen due to time restraints and large amount of sample required.
 
-The principal component analysis of the proteomic data suggested that PC4 was able to separate the bariatric and control groups. Although PC4 was not the main source of variance, even with a small N number, this provided evidence that the group (bariatric/control) could explain variation in proteins. Therefore, some protein signatures may be due to the difference in BMI. However, it could also be due to other factors which differed across groups such as previous COVID-19 infection or T2D diagnosis. Concordance with previous studies in terms of proteins reportedly altered with BMI also suggests that the current study is likely capturing platelet protein signatures of obesity. Table \@ref(tab:proteome-lit) shows the results that have replicated in the current study when comparing to three previous studies that have studied the platelet proteome[@Barrachina2019], platelet microvesicle proteome[@Grande2019] and platelet transcriptome in relation to obesity[@Freedman2010]. 
+The principal component analysis of the proteomic data suggested that PC4 was able to separate the bariatric and control groups. Although PC4 was not the main source of variance, even with a small N number, this provided evidence that the group (bariatric/control) could explain variation in proteins. Therefore, some protein signatures may be due to the difference in BMI. However, it could also be due to other factors which differed across groups such as previous COVID-19 infection or T2D diagnosis. COVID-19 infection can cause venous thromboembolism and is more likely to occur in people with obesity[@McFadyen2020; @Klok2020; @Wang2021]. Therefore, it is possible that the COVID-19 infection in the bariatric patients may cause longer-term changes in platelet activity and confound results. Despite this, concordance with previous studies in terms of proteins reportedly altered with BMI also suggests that the current study is likely capturing platelet protein signatures of obesity. Table \@ref(tab:proteome-lit) shows the results that have replicated in the current study when comparing to three previous studies that have studied the platelet proteome[@Barrachina2019], platelet microvesicle proteome[@Grande2019] and platelet transcriptome in relation to obesity[@Freedman2010]. 
 
 (ref:caption-proteome-lit) **Summary of current literature on the effect of body mass index on the platelet proteome**
 (ref:scaption-proteome-lit) Summary of current literature on the effect of body mass index on the platelet proteome
